# cpp-bored-recommender

./: .gitignore  CMakeLists.txt
test/: test.sln
test/test/: Source.cpp  test.vcxproj
unix/cpp_bored/: CMakeLists.txt  Makefile
unix/cpp_bored/source/: Makefile  data_store.cpp  recommendations.cpp  user_data.cpp  user_data.h
vs/: config.h  data_store.cpp  data_store.h  main.cpp  recommendations.cpp  recommendations.h  user_data.cpp  user_data.h  vs.sln  vs.vcxproj  vs.vcxproj.filters
